--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -137,6 +137,7 @@
     <color name="search_bar_background">@*android:color/system_neutral1_0</color>
 
     <color name="face_enroll_icon_color">#42a5f5</color> <!-- Blue 400 -->
+    <color name="face_enroll_check_color">#42a5f5</color>
 
     <color name="back_gesture_indicator">#4182ef</color>
 
