--- a/res/drawable/rising_card_build_status_background.xml
+++ b/res/drawable/rising_card_build_status_background.xml
@@ -15,7 +15,7 @@
     <item android:id="@android:id/mask">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <solid android:color="#FFFFFFFF"/>
-            <corners android:bottomRightRadius="@dimen/top_card_radius" android:bottomLeftRadius="@dimen/top_card_radius" 
+            <corners android:bottomRightRadius="@dimen/card_radius" android:bottomLeftRadius="@dimen/card_radius" 
                 android:topLeftRadius="@dimen/card_radius" android:topRightRadius="@dimen/card_radius"/> 
         </shape>
     </item>
@@ -24,7 +24,7 @@
             android:shape="rectangle">
 
             <solid android:color="?android:attr/colorAccent" />
-            <corners android:bottomRightRadius="@dimen/top_card_radius" android:bottomLeftRadius="@dimen/top_card_radius" 
+            <corners android:bottomRightRadius="@dimen/card_radius" android:bottomLeftRadius="@dimen/card_radius" 
                 android:topLeftRadius="@dimen/card_radius" android:topRightRadius="@dimen/card_radius"/> 
         </shape>
     </item>
