Home wake up: Make home button wake up opt-in [1/2]
Change-Id: Ib6170617d03cc52e5aa9ae3f2ed5940535b62737
Signed-off-by: B4579 <B4579@protonmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -193,4 +193,8 @@
     <!-- USB configuration -->
     <string name="usb_default_config_title">USB configuration</string>
     <string name="usb_default_config_summary">Choose the default behavior when connected to a device via USB</string>
+
+    <!-- Home button wake -->
+    <string name="home_wake_button_title">Home button wake-up</string>
+    <string name="home_wake_button_summary">Enable home button to waking up screen</string>
 </resources>
