--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -257,6 +257,13 @@
             settings:requiresFeature="lineagehardware:FEATURE_HIGH_TOUCH_SENSITIVITY"
             settings:position="middle" />
 
+        <com.rising.settings.preferences.AdaptiveSwitchPreference
+            android:key="home_wake_button"
+            android:title="@string/home_wake_button_title"
+            android:summary="@string/home_wake_button_summary"
+            android:defaultValue="false"
+            settings:position="middle" />
+
         <com.rising.settings.preferences.AdaptiveListPreference
             android:key="theme"
             android:title="@string/device_theme"
